Add some tests for ClassicConfiguration